add maintenance page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,6 +34,10 @@
     {
       "path": "otp.pug",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/otp.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "maintenance.pug",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/maintenance.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
     }
   ],
   "fileTree": {
@@ -52,19 +56,13 @@
   },
   "imports": [
     {
-      "path": "otp.pug",
+      "path": "404page.pug",
       "imports": [
         "_template.pug"
       ]
     },
     {
-      "path": "success.pug",
-      "imports": [
-        "_template.pug"
-      ]
-    },
-    {
-      "path": "index.pug",
+      "path": "authError.pug",
       "imports": [
         "_template.pug"
       ]
@@ -76,7 +74,25 @@
       ]
     },
     {
-      "path": "authError.pug",
+      "path": "index.pug",
+      "imports": [
+        "_template.pug"
+      ]
+    },
+    {
+      "path": "maintenance.pug",
+      "imports": [
+        "_template.pug"
+      ]
+    },
+    {
+      "path": "otp.pug",
+      "imports": [
+        "_template.pug"
+      ]
+    },
+    {
+      "path": "success.pug",
       "imports": [
         "_template.pug"
       ]
