checking payment status and insufficient fund

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,6 +38,10 @@
     {
       "path": "maintenance.pug",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/maintenance.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "nobalance.pug",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/nobalance.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
     }
   ],
   "fileTree": {
@@ -81,6 +85,12 @@
     },
     {
       "path": "maintenance.pug",
+      "imports": [
+        "_template.pug"
+      ]
+    },
+    {
+      "path": "nobalance.pug",
       "imports": [
         "_template.pug"
       ]
